--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="section">
             <h2>Education</h2>
             <ul>
-                <li><strong>Degree:</strong> B.Eng. in [Your Major, e.g., Computer Engineering]</li>
+                <li><strong>Degree:</strong>BSc (Hons) in Engineering in Information and Communication Engineering</li>
                 <li><strong>University:</strong> SLTC Research University, Sri Lanka</li>
                 <li><strong>Expected Graduation:</strong> 2025</li>
             </ul>
@@ -101,9 +101,9 @@
         <div class="section">
             <h2>Contact</h2>
             <ul>
-                <li><strong>Email:</strong> duminduudara81@gmail.com]</li>
-                <li><strong>Phone:</strong> 07505053932</li>
-                <li><strong>LinkedIn:</strong> https://www.linkedin.com/in/duminduudara</li>
+                <li><strong>Email:</strong> exampleXX@gmail.com</li>
+                <li><strong>Phone:</strong> 07XXXXXX</li>
+                <li><strong>LinkedIn:</strong>https://www.linkedin.com/in/dumindu-udara/</li>
             </ul>
         </div>
     </div>
